syntax = "proto3";

package telemetry.event;

option java_package = "ru.yandex.practicum.grpc.telemetry.event";
option java_multiple_files = true;

enum ConditionTypeProto {
  MOTION = 0;
  LUMINOSITY = 1;
  SWITCH = 2;
  TEMPERATURE = 3;
  CO2LEVEL = 4;
  HUMIDITY = 5;
}

enum ConditionOperationProto {
  EQUALS = 0;
  GREATER_THAN = 1;
  LOWER_THAN = 2;
}

message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;

  oneof value {
    int32 int_value = 4;
    bool bool_value = 5;
  }
}

enum ActionTypeProto {
  ACTIVATE = 0;
  DEACTIVATE = 1;
  INVERSE = 2;
  SET_VALUE = 3;
}

message DeviceActionProto {
  string device_id = 1;
  ActionTypeProto action = 2;
  int32 value = 3;
}

