syntax = "proto3";

package telemetry.event;

option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";
import "telemetry/event/scenario_added.proto";

enum DeviceTypeProto {
  MOTION_SENSOR = 0;
  TEMPERATURE_SENSOR = 1;
  LIGHT_SENSOR = 2;
  CLIMATE_SENSOR = 3;
  SWITCH_SENSOR = 4;
}

message DeviceAddedEventProto {
  string id = 1;
  DeviceTypeProto type = 2;
}

message DeviceRemovedEventProto {
  string id = 1;
}

message ScenarioRemovedEventProto {
  string id = 1;
}

message HubEventProto {
  string hub_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  oneof payload {
    DeviceAddedEventProto device_added = 3;
    DeviceRemovedEventProto device_removed = 4;
    ScenarioAddedEventProto scenario_added = 5;
    ScenarioRemovedEventProto scenario_removed = 6;
  }
}